--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
+    "@vuepress/plugin-google-analytics": "^1.5.2",
     "vue-template-compiler": "^2.6.10",
-    "vuepress": "^1.5.2"
+    "vuepress": "^1.5.2",
+    "vuepress-plugin-seo": "^0.1.3"
   },
   "postcss": {
     "plugins": {
