--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vuepress-plugin-sitemap": "^2.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
