--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vue/cli-plugin-pwa": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
     "@vuepress/plugin-google-analytics": "^1.5.2",
+    "@vuepress/plugin-pwa": "^1.5.2",
     "vue-template-compiler": "^2.6.10",
     "vuepress": "^1.5.2",
     "vuepress-plugin-seo": "^0.1.3"
