--- a/src/.vuepress/public/manifest.json
+++ b/src/.vuepress/public/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Jab",
   "icons": [
     {
-      "src": "../assets/favicon.png",
-      "sizes": "512x512",
+      "src": "favicon.png",
+      "sizes": "800x800",
       "type": "image/png"
     }
   ],
