--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "vuepress eject src"
   },
   "dependencies": {
+    "markdown-it-katex": "^2.0.3",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -16,6 +17,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@maginapp/vuepress-plugin-katex": "^1.0.7",
     "@vue/cli-plugin-pwa": "^3.1.1",
     "@vue/cli-service": "^3.1.1",
     "@vuepress/plugin-google-analytics": "^1.5.2",
