--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuepress-plugin-sitemap": "^2.3.1",
+    "vuepress-theme-ktquez": "^0.2.18",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
