--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "dev": "vuepress dev src",
+    "dev:host":"vuepress dev src --host 0.0.0.0 --port 8080",
     "build": "vuepress build src",
     "eject": "vuepress eject src"
   },
